# INEI-mcp

./: .antigravity.json  .env.example  README.md  formato.json  pyproject.toml
src/inei_mcp/: client.py  config.py  exceptions.py  formatters.py  server.py
src/inei_mcp/prompts/: analysis.py
src/inei_mcp/resources/: guides.py
src/inei_mcp/tools/: census.py  indicators.py  ubigeo.py
tests/: test_formatters.py
