[project]
name = "inei-mcp"
version = "0.1.0"
description = "MCP server for the INEI (Instituto Nacional de Estadística e Informática) Estadist API — Peru census and statistical indicators"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "JOSETRA44", email = "drivearchiver@gmail.com" }]
keywords = ["mcp", "inei", "peru", "census", "statistics", "estadisticas"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "anyio>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/JOSETRA44/inei-mcp"
Repository = "https://github.com/JOSETRA44/inei-mcp"

[project.scripts]
inei-mcp = "inei_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/inei_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-httpx>=0.35.0",
    "respx>=0.21.0",
]
